--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </div>
 
     <div class="controls">
-        <p class="start">Press spacebar to start!
+        <p class="start">Press spacebar to start!</p>
         <small>(or touch this text)</small>
-        </p>
+        
     </div>
     
     <button id="instructionsBtn">instructions</button>
