--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <div class="controls">
         <p class="start">Press spacebar to start!</p>
         <small>(or touch this text)</small>
-        
     </div>
     
     <button id="instructionsBtn">instructions</button>
@@ -27,7 +26,7 @@
 
     <div id="instructionsModal" class="instructions_modal hidden">
         <button id="closeModalBtn">x</button>
-        <p>swipe any left, right, top, down to change direction (on mobile)</p>
+        <p>swipe left, right, top, down to change direction (on mobile)</p>
         <span class="or">or</span>
         <div class="instructions">
             <div class="top">
@@ -47,7 +46,7 @@
             <p class="bottom"><i class="fa-solid fa-arrow-right"></i></p>
         </div>
         <div class="controls">
-            <p>Press spacebar to start! (or text below game board)</p>
+            <p>Press spacebar to start! (or text below the game board)</p>
         </div>
     </div>
     <script src="main.js"></script>
