--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>SNAKE</title>
+    <title>SNAKE - Play the Classic Snake Game Online</title>
+    <meta name="description" content="Play the classic Snake game online and challenge your high score. Control the snake to eat dots and grow longer while avoiding collisions. Enjoy the nostalgic gameplay now!">
+    <meta name="keywords" content="snake game, play snake online, classic snake, snake game online, snake game HTML, snake game JavaScript">
 </head>
 <body>
     <h1>SNAKE</h1>
