--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
         <p class="start">Press spacebar to start!</p>
         <small>(or touch this text)</small>
     </div>
-    
-    <button id="instructionsBtn">instructions</button>
-    <button id="resetBtn">reset</button>
+
+    <div class="btns_container">
+        <button id="instructionsBtn">how to play</button>
+        <button id="resetBtn">reset</button>
+    </div>
 
     <div id="instructionsModal" class="instructions_modal hidden">
         <button id="closeModalBtn">x</button>
