--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div id="snake"></div>
     </div>
 
-    <div class="controls">
-        <p class="start">Press spacebar to start!</p>
+    <div class="controls start">
+        <p>Press spacebar to start!</p>
         <small>(or touch this text)</small>
     </div>
 
